experiments/logsICC/1846.log
/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(68): warning #161: unrecognized #pragma
    #pragma scop
            ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(71): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(81): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(84): error: simd clause is incompatible with directive
        #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                     ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(91): error: simd clause is incompatible with directive
      #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                   ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(94): error: simd clause is incompatible with directive
        #pragma omp parallel for schedule(static, 2) simd num_threads(2)
                                                     ^

/uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c(104): warning #161: unrecognized #pragma
    #pragma endscop
            ^

compilation aborted for /uufs/chpc.utah.edu/common/home/u1074259/ytopt/experiments/covariance_mk3/tmp_files/1846.c (code 2)
